SUBDIRS = src
dist_doc_DATA = README
clean-all-local: maintainer-clean
	-rm -f $(SUBDIRS)/Makefile.in
	-rm -f $(top_srcdir)/Makefile.in
	-rm -f $(top_srcdir)/configure
	-rm -f $(top_srcdir)/aclocal.m4
	-rm -f $(top_srcdir)/config.h.in
	-rm -f $(top_srcdir)/depcomp
	-rm -f $(top_srcdir)/install-sh
	-rm -f $(top_srcdir)/missing
